fix filter on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ body {
 }
 
 img,
-picutre {
+picture {
+    /* width: auto;
+    height: auto; */
     max-width: 100%;
     display: block;
 }
@@ -88,7 +90,7 @@ picutre {
     list-style: none;
     padding: 0;
     margin: 0;
-    background: hsl(0, 0%, 100%, 0.5) backdrop-filter: blur(2rem);
+    background: hsl(0, 0%, 100%, 0.5);
 }
 
 @supports (backdrop-filter: blur(2rem)) {
